NEXTEUROPA-4528 fixing in-page nav overflow
Former-commit-id: 36d655ad2941f395b3b5a93ac3c9020d530ce7f9

--- a/project/themes/europa/css/style-sass.css
+++ b/project/themes/europa/css/style-sass.css
@@ -7682,7 +7682,7 @@ Styleguide inpagenav
     line-height: 21px;
     font-weight: bold; }
   .inpage-nav__navbar .inpage-nav__list {
-    margin: 0px !important; }
+    max-height: none; }
     .inpage-nav__navbar .inpage-nav__list li.active .inpage_nav__list__item {
       color: inherit;
       background: none; }
